--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,18 @@
         text-align: center;
         padding: 0 40px;
     }
+    .text{
+    width: 30%;
+    background: linear-gradient(135deg,#00d8d6, #4ecdc4);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #1e272e;
+    text-align: center;
+    padding: 0 40px; }
+
     .logen input{
         width: 100%;
         height: 30px;
