--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@
     
     }
     .logen{
-        width: 100%;
+        width: 72%;
         background: linear-gradient(135deg,#485460, #0c0e0d);
         height: 100%;
         display: flex;
@@ -99,8 +99,20 @@
         align-items: center;
         color: #1e272e;
         text-align: center;
-        padding: 0 20px;
+        padding: 0 40px;
     }
+.text{
+    width: 30%;
+    background: linear-gradient(135deg,#00d8d6, #4ecdc4);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #1e272e;
+    text-align: center;
+    padding: 0 40px; }
+
     .logen input{
         width: 100%;
         height: 30px;
@@ -128,7 +140,7 @@
     
     }
     .logen{
-        width: 100%;
+        width: 72%;
         background: linear-gradient(135deg,#485460, #0c0e0d);
         height: 100%;
         display: flex;
@@ -151,3 +163,5 @@
     
     
 }
+
+
