--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@
 
 }
 
-
+/*
 
 @media (max-width:767px){
     .contenir{
@@ -126,6 +126,7 @@
     
     
 }
+*/
 @media (max-width:767px)and(max-width:1400px){
     .contenir{
         display: flex;
