--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@
     color: rgb(255, 255, 255);
 
 }
+/*
 
 @media (max-width:767px){
     .contenir{
@@ -125,6 +126,7 @@
     
     
 }
+*/
 @media (max-width:767px)and(max-width:1400px){
     .contenir{
         display: flex;
