--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@
     
     
     }
-    .logen{
-        width: 80%;
+  .sign-up{
+        width: 72%;
         background: linear-gradient(135deg,#485460, #0c0e0d);
         height: 100%;
         display: flex;
@@ -101,19 +101,7 @@
         text-align: center;
         padding: 0 40px;
     }
-.text{
-    width: 10%;
-    background: linear-gradient(135deg,#00d8d6, #4ecdc4);
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: #1e272e;
-    text-align: center;
-    padding: 0 40px; }
-
-    .logen input{
+    .sign-up input{
         width: 100%;
         height: 30px;
         border-radius: 10px;
@@ -121,9 +109,9 @@
         padding-left: 5px;
         border: solid;
         outline: none;
+
     }
-    
-    
+
 }
 
 @media (max-width:767px)and(max-width:1400px){
@@ -163,6 +151,7 @@
     }
     
     
+
 }
 
 
